Fix footer alignment

--- a/static/sass/_custom.scss
+++ b/static/sass/_custom.scss
@@ -44,6 +44,7 @@
 	footer {
 	    .references, .colophon {
 	    	width: flex-grid(6,12);
+	    	margin:0;
 	    }
     	h1.logo {
 		    float: left;
